--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
 <div id="wrapper">
 
     <!-- Header -->
+    <!--
     <header id="header">
         <h1><a href="index.html"><strong>{{ site.header.title }}</strong> {{ site.header.subtitle }}</a></h1>
         <nav>
@@ -13,7 +14,7 @@ layout: default
                 <li><a href="#footer" class="icon fa-info-circle">About</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
     <!-- Main -->
     <div id="main">
