--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@ layout: default
         </nav>
     </header> -->
 
+    <style>
+        
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
+
     <!-- Main -->
     <div id="main">
         {% for image in site.static_files %}
