--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ layout: default
         {% for image in site.static_files %}
         {% if image.path contains 'fulls' %}
         <div class="imgbox">
-            <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}" alt=""
-                        data-name="{{ image.name }}" class="center-fit"/>
+            <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}"
+                        class="center-fit" loading="lazy"/><br>
         </div>
         {% endif %}
         {% endfor %}
@@ -53,21 +53,6 @@ layout: default
                     <h2>{{ site.footer.name }}</h2>
                     <p>{{ site.footer.bio }}</p>
                     <p>{{ site.footer.github }}</p>
-                </section>
-                <section>
-                    <h2>Sponsor</h2>
-                    <div class="ad">
-                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                        <ins class="adsbygoogle"
-                             style="display:block; text-align:center;"
-                             data-ad-layout="in-article"
-                             data-ad-format="fluid"
-                             data-ad-client="ca-pub-1702577941194110"
-                             data-ad-slot="9823584598"></ins>
-                        <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
-                    </div>
                 </section>
                 <section>
                     <h2>Follow me on ...</h2>
