--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
 
     <header>
         <div class="logo">
-            <img src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/malben.png"/>
+            <img src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
         </div>
     </header>
 
