--- a/index1.html
+++ b/index1.html
@@ -20,9 +20,8 @@
 <body>
 
     <header>
-        <div class="logo">
-            <img src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
-        </div>
+        <img loading="lazy" class="logo"
+            src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
     </header>
 
     <section id="home" class="hometext">
