--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
     <section id="home" class="hometext">
         <div class="container">
             <h1>צילום<br>אירועים</h1>
-            <a href="#portfolio" class="button button-accent">See my Work</a>
+            <a href="#main" class="button button-accent">לחצו כאן</a>
         </div>
     </section>
 
@@ -30,7 +30,7 @@ layout: default
         {% endfor %}
     </div>
 
-    
+
     <footer class="footer-main-div">
         <div class="footer-social-icons">
             <ul>
