--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@ layout: default
 <div id="wrapper">
 
     <header>
-        <img loading="lazy" class="logo"
-            src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
-    </header>
+        <div class="header1">
+            <ul>
+                <img loading="lazy" class="logo"
+                src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
 
-    <section id="home" class="hometext">
-        <div class="container">
-            <h1>צילום<br>אירועים</h1>
-            <a href="#main" class="button button-accent">לחצו כאן</a>
+                <li><a href="https://www.facebook.com/ariel.and.nitay/" target=" blank"><i
+                            class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com/ariel_nitay_photography/" target="blank"><i
+                            class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            </ul>
         </div>
-    </section>
-
+    </header>
+    
+    <h1>אריאל ונתאי – <b>צילום אירועים</b></h1>
 
     <!-- Main -->
     <div id="main">
@@ -29,22 +32,8 @@ layout: default
         {% endif %}
         {% endfor %}
     </div>
-
-
-    <footer class="footer-main-div">
-        <div class="footer-social-icons">
-            <ul>
-                <li><a href="https://www.facebook.com/ariel.and.nitay/" target=" blank"><i
-                            class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.instagram.com/ariel_nitay_photography/" target="blank"><i
-                            class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            </ul>
-        </div>
-
-        <div class="footer-bottom">
-            <p id="contact">Designed By:<a href="https://www.instagram.com/the_spectacled_one/"
-                    target="_blank">the_spectacled_one</a></p>
-        </div>
-
+    
+    <footer>
+        <p>&copy; אריאל ונתאי צילום</p>
     </footer>
 </div>
