--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
     
                 <li><a href="https://www.facebook.com/ariel.and.nitay/" target=" blank"><i
-                            class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                            class="fa fa-facebook-square"></i></a></li>
                 <li><a href="https://www.instagram.com/ariel_nitay_photography/" target="blank"><i
-                            class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                            class="fa fa-instagram"></i></a></li>
             </ul>
         </div>
     </header>
