--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
 <section id="home" class="hometext">
     <div class="container">
         
-    <h1>אריאל ונתאי – <b>צילום אירועים</b></h1>
+    <h1>אריאל ונתאי<br>צילום אירועים</h1>
     </div>
 </section>
 
