--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
                             class="fa fa-facebook-square"></i></a></li>
                 <li><a href="https://www.instagram.com/ariel_nitay_photography/" target="blank"><i
                             class="fa fa-instagram"></i></a></li>
-                <li><a href="https://wa.me/972587990583?text=%D7%94%D7%99%D7%99+%D7%90%D7%A8%D7%99%D7%90%D7%9C%2C+%D7%90%D7%A9%D7%9E%D7%97+%D7%9C%D7%A9%D7%9E%D7%95%D7%A2+%D7%A4%D7%A8%D7%98%D7%99%D7%9D+%D7%9C%D7%92%D7%91%D7%99+%D7%A6%D7%99%D7%9C%D7%95%D7%9D+%D7%90%D7%99%D7%A8%D7%95%D7%A2+%3A%29" target="blank"><i
+                <li><a href="https://wa.me/972587990583" target="blank"><i
                             class="fa fa-whatsapp"></i></a></li>
             </ul>
         </div>
@@ -41,6 +41,7 @@
     <h1><b>אריאל ונתאי</b><br>צילום אירועים</h1>
     </div>
 </section>
+
 
 <div class="black-line">
 </div>
