--- a/index1.html
+++ b/index1.html
@@ -12,9 +12,6 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
-
-    <!-- <title>Chitrahaar</title> -->
 </head>
 
 <body>
@@ -23,7 +20,7 @@
         <div class="header1">
             <ul>
                 <img loading="lazy" class="logo"
-                src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
+                src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.jpg"/>
     
                 <li><a href="https://www.facebook.com/ariel.and.nitay/" target=" blank"><i
                             class="fa fa-facebook-square"></i></a></li>
@@ -49,9 +46,9 @@
     <!-- Main -->
     <div id="main">
         {% for image in site.static_files %}
-        {% if image.path contains 'fulls' %}
+        {% if image.path contains 'bad-quality' %}
         <div class="imgbox">
-            <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}"
+            <img src="{{ site.baseurl }}{{ site.image_fulls_loc }}/{{ image.name }}"
                         class="center-fit" loading="lazy"/><br>
         </div>
         {% endif %}
