--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
     <div class="header1">
         <ul>
             <img loading="lazy" class="logo"
-            src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.jpg"/>
+            src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
 
             <li><a href="https://www.facebook.com/ariel.and.nitay/" target=" blank"><i
                         class="fa fa-facebook-square"></i></a></li>
