--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ layout: default
 <header>
     <div class="header1">
         <ul>
-            <img loading="lazy" class="logo"
-            src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
-
+            <a href="index.html">
+                <img loading="lazy" class="logo"
+                src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
+            </a>
+            
             <li><a href="https://www.facebook.com/ariel.and.nitay/" target=" blank"><i
                         class="fa fa-facebook-square"></i></a></li>
             <li><a href="https://www.instagram.com/ariel_nitay_photography/" target="blank"><i
