--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
     <div class="header1">
         <ul>
             <a href="index.html">
-                <img loading="lazy" class="logo"
+                <img class="logo"
                 src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
             </a>
             
