--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
     <header>
         <div class="header1">
             <ul>
-                <a href="index.html">
+                <a href="">
                     <img class="logo" id="logo" onload="whenLoaded()"
                     src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
                 </a>
