--- a/index1.html
+++ b/index1.html
@@ -23,9 +23,10 @@
     <header>
         <div class="header1">
             <ul>
+                <a href="">
                 <img class="logo" id="logo" onload="whenLoaded()"
                 src="https://raw.githubusercontent.com/ArielAndNitay/ArielAndNitay.github.io/master/images/logo.png"/>
-
+                </a>
                 <li><a href="https://www.facebook.com/ariel.and.nitay/" target=" blank"><i
                             class="fa fa-facebook-square"></i></a></li>
                 <li><a href="https://www.instagram.com/ariel_nitay_photography/" target="blank"><i
