--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
                 
                 <li><a href="https://www.facebook.com/ariel.and.nitay/" target=" blank"><i
                             class="fa fa-facebook-square"></i></a></li>
-                <li><a href="https://www.instagram.com/ariel_nitay_photography/" target="blank"><i
+                <li><a href="https://www.instagram.com/ariel.and.nitay/" target="blank"><i
                             class="fa fa-instagram"></i></a></li>
                 <li><a href="https://wa.me/972587990583" target="blank"><i
                             class="fa fa-whatsapp"></i></a></li>
