--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@ layout: default
 
 <script src="script.js"></script>
 
-<div class="loader" id="loader"></div>
+
+<div class="flex-container">
+    <div class="loader" id="loader"></div>
+</div>
 
 <div id="container" hidden>
 
