--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,9 @@
 
 <body>
 <script src="script.js"></script>
-<div class="loader" id="loader"></div>
+<div class="flex-container">
+    <div class="loader" id="loader"></div>
+</div>
 
 <div id="container" hidden>
 
