--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <script src="script.js"></script>
 
 
-<div class="flex-container">
-    <div class="loader" id="loader"></div>
+<div class="flex-container" id="loader">
+    <div class="loader"></div>
 </div>
 
 <div id="container" hidden>
@@ -48,7 +48,7 @@ layout: default
     </div>
 
     <footer>
-        <p>&copy; אריאל ונתאי – בניית אתרים</p>
+        <p>&copy; אריאל ונתאי – צילום</p>
     </footer>
 
 </div>
