--- a/index1.html
+++ b/index1.html
@@ -16,8 +16,8 @@
 
 <body>
 <script src="script.js"></script>
-<div class="flex-container">
-    <div class="loader" id="loader"></div>
+<div class="flex-container" id="loader">
+    <div class="loader"></div>
 </div>
 
 <div id="container" hidden>
