--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: default
 <script src="script.js"></script>
 
 
-<div class="flex-container" id="loader">
-    <div class="loader"></div>
+<div id="loader-container">
+    <div id="loader"></div>
 </div>
 
-<div id="container" hidden>
+<div id="container" >
 
     <header>
         <div class="header1">
@@ -30,7 +30,7 @@ layout: default
     </header>
 
     <section id="home" class="hometext">
-        <div class="container">
+        <div class="footer-container">
         <h1><b>אריאל ונתאי</b><br>צילום אירועים</h1>    
         </div>
     </section>
